# SWORD

./: .env.example  .gitignore  CLAUDE.md  DEVELOPMENT_STATUS.md  MIGRATION_STATUS.md  README.md  check_reviewer_setup.py  environment.yml  lake_ids.csv  lake_reviewer.py  presentation_lake_context.py  presentation_materials.py  pyproject.toml  pytest.ini  rebuild_v17b.py  reimport_fixes.py  requirements-reviewer.txt  requirements.txt  reviewer.py  run_reviewer.bat  run_reviewer.sh  run_v17c_topology.py  sword_read.m  sword_validity.m  top_100_coastal_river_outlets.csv  top_100_coastal_river_outlets.geojson  topology_investigator.py  topology_optimizer.py  topology_reviewer.py  visualize_all_pipelines.py  visualize_comparison_3panel.py  visualize_samples.py
.claude/: napkin.md
.dmux-hooks/: before_pane_close  post_merge  run_test  worktree_created
.history/: .gitignore_20250731183539
docs/: Notes about V17c.txt  VALIDATION_PLAN.md  facc_conservation_algorithm.md  facc_correction_methodology.md  facc_correction_summary.md  v17c_plan_to_april.md  v17c_status.md  v17c_v18_roadmap.md
merging_databases/: Merge_Databases_v06.py  Merge_Tools_v06.py  Merging_Figures.py
mhv_sword/: 1_mhv_sword_flag_db.py  3_attach_mhv_attributes.py  4_divide_mhv_into_reaches.py  attach_global_attributes.py  attach_mhv_attributes.py  divide_mhv_into_reaches.py  mhv_reach_def_tools.py  mhv_reach_figures.py
notebooks/: README_diagnostic_plots.md  build_temporal_variability_geojson.py  build_temporal_variability_weekly_geojson.py  build_weekly_variability_metrics_geojson.py  verify_models.py  (+12 more)
(+936 files in other folders)
