[tool.poetry]
name = "sword"
version = "0.1.0"
description = ""
authors = ["Jake Gearon <jake.gearon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
netcdf4 = "^1.7.2"
pandas = "^2.3.1"
duckdb = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
