[tool.poetry]
name = "sword"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
netcdf4 = "^1.7.1"
pandas = "^2.2.2"
duckdb = "^1.0.0"
geopy = "^2.4.1"
geopandas = "^0.14.4"
shapely = "^2.0.4"
pyarrow = "^16.1.0"
dask = "^2025.7.0"
requests = "^2.32.4"
tqdm = "^4.67.1"
matplotlib = "^3.10.5"
seaborn = "^0.13.2"
statsmodels = "^0.14.5"
scikit-learn = "^1.7.1"
utm = "^0.8.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
